--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-cookies",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Cookie manager for React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -76,7 +76,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint && yarn typescript"
+      "pre-commit": "npm run lint && npm run typescript"
     }
   },
   "commitlint": {
