--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-cookies",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Cookie manager for React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -11,8 +11,9 @@
     "lib",
     "android",
     "ios",
-    "cpp",
-    "native-cookies.podspec"
+    "native-cookies.podspec",
+    "!example",
+    "!**/build"
   ],
   "scripts": {
     "prepare": "bob build",
