--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,18 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "native-cookies": ["./src/index"]
+      "native-cookies": [
+        "src/index.js"
+      ]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
-    "lib": ["esnext"],
+    "lib": [
+      "esnext"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
